[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embedded crates
embedded-hal = "1.0.0"
embedded-alloc = "0.6.0"
fugit = { version = "0.3.7", features = ["defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }


## Hardware support crates
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
rp-pico = "0.9.0"
rp2040-boot2 = "0.3.0"
defmt = "1.0.1"
defmt-serial = "0.10.0"
log = "0.4.28"
dogs164-rs ={path = "..",version = "*"}

# Panic handler
panic-halt = "1.0.0"
heapless = "0.9.1"
